--- a/css/global.css
+++ b/css/global.css
@@ -23,7 +23,7 @@ html {
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
-  font-size: 14px;
+  font-size: 15px;
   position: relative;
   background-color: #282828;
   line-height: 1.6;
@@ -43,7 +43,7 @@ html {
 @media all and (min-width: 769px) and (max-width: 991px) {
   body,
 html {
-    display: 15px;
+    font-size: 15px;
   }
 }
 
@@ -404,7 +404,7 @@ input:-internal-autofill-selected {
 }
 
 .xs-font {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .l-font {
@@ -984,8 +984,8 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   height: 6px;
   border-radius: 50%;
   background-color: #C53932;
-  margin-right: 5px;
-  margin-bottom: 2px;
+  margin-right: 10px;
+  margin-bottom: 3px;
 }
 .main-title div:nth-of-type(2) {
   color: #C53932;
@@ -1022,6 +1022,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   padding: 2px 10px;
   display: inline-block;
   color: #000;
+  text-align: center;
 }
 
 .content-row {
@@ -1264,7 +1265,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .section .content {
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 .section .actions {
   display: -webkit-inline-box;
@@ -1584,6 +1585,32 @@ footer > div a img {
 .gotop.show {
   visibility: visible;
   opacity: 1;
+}
+
+.table {
+  display: table;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table-tr {
+  display: table-row;
+  width: 100%;
+}
+
+.table-th {
+  display: table-cell;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #818181;
+}
+
+.table-td {
+  display: table-cell;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
 }
 
 @media all and (min-width: 769px) and (max-width: 991px) {
