--- a/scss/all.scss
+++ b/scss/all.scss
@@ -141,6 +141,7 @@
   .showing-list {
     text-align: center;
     position: relative;
+
     @include v.pad-width {
       margin-bottom: 20px;
     }
@@ -148,9 +149,11 @@
     @include v.phone-width {
       margin-bottom: 20px;
     }
+
     a {
       display: block;
       padding: 0 5px;
+
       >div {
         @include v.mini-width {
           padding-right: 0;
@@ -204,7 +207,7 @@
 
       .material-icons {
         color: v.$primary;
-        font-size: 30px;
+        font-size: 2.5rem;
       }
 
       select {
@@ -296,7 +299,8 @@
       >div {
         margin-bottom: 5px;
         @extend %weight600;
-        &:last-of-type{
+
+        &:last-of-type {
           margin-bottom: 0;
         }
 
@@ -321,14 +325,15 @@
   }
 
   .movie-info {
-    .movie-item{
-      &:first-of-type{
-        padding-right: 20px;
+    .movie-item {
+      &:first-of-type {
+        padding-right: 2vw;
+
         @include v.pad-width {
           padding-right: 0;
           margin-bottom: 20px;
         }
-  
+
         @include v.phone-width {
           padding-right: 0;
           margin-bottom: 20px;
@@ -336,6 +341,7 @@
         }
       }
     }
+
     .row-3 {
       @include v.pad-width {
         flex-basis: 100%;
@@ -514,13 +520,16 @@
   .news {
     .event {
       margin-bottom: 40px;
+
       @include v.phone-width {
         padding: 0;
       }
-      a{
+
+      a {
         display: block;
         padding: 0 5px;
       }
+
       .sub-title {
         margin-top: 15px;
         margin-bottom: 0;
@@ -711,7 +720,7 @@
       @include v.pad-width {
         padding-right: 0;
         margin-bottom: 40px;
-      } 
+      }
 
       @include v.phone-width {
         padding-right: 0;
@@ -789,7 +798,7 @@
       }
 
       .material-icons {
-        font-size: 40px;
+        font-size: 3rem;
         vertical-align: middle;
         margin-right: 10px;
       }
@@ -830,10 +839,13 @@
     }
   }
 
-  .booking-s1 {
+  .book-tickets {
     .row-left {
-      img {
-        width: 80%;
+      padding-right: 2vw;
+
+      @include v.phone-width {
+        padding-right: 0;
+        margin: 0 auto 2vw auto;
       }
     }
 
@@ -846,10 +858,22 @@
       border-radius: 10px;
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
+
+      @include v.pad-width {
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        padding: 20px;
+      }
+
+
       .movie-item {
         width: 100%;
         display: inline-flex;
         align-items: center;
+
+        @include v.phone-width {
+          margin-bottom: 10px;
+        }
 
         .movie-title {
           margin-top: 0;
@@ -858,6 +882,7 @@
         }
 
         .movie-level {
+          width: 80px;
           margin-bottom: 0;
           height: fit-content;
           margin-right: 20px;
@@ -866,7 +891,7 @@
 
       .movie-detail {
         .material-icons {
-          font-size: 35px;
+          font-size: 2rem;
           margin-right: 10px;
           color: v.$red-bg-color;
         }
@@ -874,9 +899,18 @@
         .detail {
           margin-bottom: 30px;
 
-          &.mb-0{
-            margin-bottom: 0;
+          @include v.phone-width {
+            margin-bottom: 10px;
           }
+
+          &.mb-0 {
+            margin-bottom: 0;
+
+            @include v.phone-width {
+              margin-bottom: 10px;
+            }
+          }
+
           &.disable {
             color: #818181;
 
@@ -885,8 +919,17 @@
             }
           }
         }
+
+        .start-time {
+          padding: 2px 5px;
+          border: 1px solid #818181;
+          border-radius: 3px;
+          margin-right: 4px;
+        }
       }
     }
+
+
     .row-right {
       padding: 30px;
       background-color: rgba(0, 0, 0, 0.247);
@@ -896,50 +939,300 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      .summary{
+
+      @include v.pad-width {
+        border-radius: 10px;
+        border-left: none;
+        margin-top: 2vw;
+        padding: 20px;
+      }
+
+      @include v.phone-width {
+        border-left: none;
+        margin-top: 2vw;
+      }
+
+      .summary {
         color: #A18978;
         text-align: right;
-      
+
+        @include v.pad-width {
+          text-align: left;
+
+        }
+
+        @include v.phone-width {
+          text-align: left;
+        }
+
         .material-icons {
-          font-size: 30px;
+          font-size: 2rem;
           margin-right: 10px;
         }
       }
-      .summary-detail{
-        height: 100%;
-        padding-top: 10px;
-          li{ display: flex;padding: 0 10px;}
 
-          .ticket-name{
-            width: 100%;
-          }
-          .ticket-number{
-            width: 80px;
-            text-align: right;
-            margin-right: 5px;
-          }
-          .ticket-sum{
-            width: 50%;
-            text-align: right;
-            margin-left: 5px;
-          }
-      }
-      .summary-total{
-        background-color: #81818153;
-        padding: 5px 10px;
-        li{display: flex;}
-        .ticket-name{
+      .summary-detail {
+        height: 100%;
+        padding: 10px 0;
+
+        li {
+          display: flex;
+          padding: 0 10px;
+        }
+
+        .ticket-name {
           width: 100%;
         }
-        .ticket-sum{
+
+        .ticket-number {
+          width: 80px;
+          text-align: right;
+          margin-right: 5px;
+        }
+
+        .ticket-sum {
+          width: 50%;
+          text-align: right;
+          margin-left: 5px;
+        }
+
+      }
+
+      .summary-total {
+        background-color: #81818153;
+        padding: 5px 10px;
+
+        li {
+          display: flex;
+        }
+
+        .ticket-name {
+          width: 100%;
+        }
+
+        .ticket-sum {
           width: 40%;
           text-align: right;
           margin-left: 5px;
         }
       }
     }
+
+    .row-5 {
+      @include v.pad-width {
+        flex: 50%;
+        width: 50%;
+      }
+
+      @include v.phone-width {
+        flex: 100%;
+        width: 100%;
+      }
+    }
+
+    .row-3 {
+      @include v.pad-width {
+        flex: 100%;
+        width: 100%;
+      }
+
+      @include v.phone-width {
+        flex: 100%;
+        width: 100%;
+      }
+    }
   }
-} 
+
+  .tickets-package {
+    .row-left {
+      padding-right: 2vw;
+
+      @include v.pad-width {
+        padding-right: 0;
+      }
+
+      @include v.phone-width {
+        padding-right: 0;
+      }
+
+
+      .package {
+        margin-bottom: 30px
+      }
+    }
+
+    .main-title div:nth-of-type(1)::before {
+      background-color: v.$blue-bg-color;
+    }
+
+    .main-title div:nth-of-type(2) {
+      color: v.$blue-bg-color;
+    }
+
+
+    .package-title {
+      .table-th {
+        background-color: #036EB7;
+        padding: 5px 5px 5px 10px;
+        text-align: left;
+      }
+
+      .sale {
+        @include v.bg-opacity(v.$blue-bg-color, 0.8);
+      }
+
+      .material-icons {
+        margin-right: 10px;
+      }
+    }
+
+    .package-content {
+      margin-top: 5px;
+      background-color: #ccc;
+      padding: 15px 20px;
+
+      @include v.phone-width {
+        padding: 10px;
+        
+        
+        overflow-x: auto;
+      }
+
+      .table-th:first-of-type {
+        text-align: left;
+        padding-left: 10px;
+      }
+
+      .ticket-set {
+        .table-td {
+          color: v.$red-bg-color;
+          padding: 10px;
+
+          div {
+            color: v.$secondary;
+            @extend %weight400;
+          }
+
+          &:first-of-type {
+            width: 45%;
+            text-align: left;
+          }
+
+          &:nth-of-type(2) {
+            width: 10%;
+            max-width: 10%;
+          }
+
+          &:nth-of-type(3) {}
+
+          &:nth-of-type(4) {
+            width: 20%;
+          }
+        }
+
+        .type {
+          @extend %weight600;
+        }
+
+      }
+
+      .ticket-sheet {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+
+        span {
+          display: inline-block;
+          text-align: center;
+          font-size: 25px;
+          width: 50px;
+          cursor: pointer;
+          @extend %weight600;
+
+          &.minus {
+            color: #818181;
+          }
+        }
+
+        input {
+          color: #000;
+          width: 80%;
+          height: 30px;
+          padding: 0;
+          text-align: center;
+          border-color: #81818153;
+        }
+      }
+    }
+
+    .row-right {
+      border: 1px solid #818181;
+      border-radius: 10px;
+      padding: 20px 30px;
+      height: fit-content;
+
+      >.material-icons {
+        width: 100%;
+        text-align: right;
+        color: v.$yellow-bg-color;
+      }
+
+      .note {
+        margin-bottom: 5px;
+        @extend %weight600;
+
+        .material-icons {
+          font-size: 2rem;
+          margin-right: 5px;
+          vertical-align: bottom;
+        }
+      }
+
+      ul {
+        margin-left: 40px;
+      }
+
+      li {
+        list-style: decimal-leading-zero;
+
+        &:last-of-type {
+          margin-bottom: 20px;
+        }
+      }
+    }
+
+    .actionbtn {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+
+      button {
+        width: fit-content;
+        color: #000;
+        display: flex;
+        align-items: center;
+
+        &.next {
+          background-color: v.$btn-primary;
+          margin-left: 10px;
+
+          .material-icons {
+            margin-left: 10px
+          }
+        }
+
+        &.back {
+          @include v.bg-opacity(v.$blue-bg-color, 0.8);
+          margin-right: 10px;
+
+          .material-icons {
+            margin-right: 10px
+          }
+        }
+      }
+    }
+  }
+}
 
 // animate
 @keyframes rotate {
