--- a/css/all.css
+++ b/css/all.css
@@ -72,7 +72,7 @@
   padding-bottom: 4px;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 1px;
   background: var(--bc);
   -webkit-animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
           animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
@@ -881,7 +881,7 @@
   color: #DD362B;
 }
 .section .book-tickets .row-min .movie-detail .detail {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 @media all and (max-width: 768px) {
   .section .book-tickets .row-min .movie-detail .detail {
