--- a/css/all.css
+++ b/css/all.css
@@ -208,6 +208,16 @@
   background-color: #FCC900;
   background-color: rgba(252, 201, 0, 0.8);
 }
+@media all and (min-width: 769px) and (max-width: 991px) {
+  .section .onlinebook {
+    margin-bottom: 40px;
+  }
+}
+@media all and (max-width: 768px) {
+  .section .onlinebook {
+    margin-bottom: 40px;
+  }
+}
 .section .onlinebook .select-box {
   padding-right: 2vw;
 }
@@ -301,7 +311,7 @@
   margin-right: 10px;
 }
 .section .movie-item .list-item > div {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 .section .movie-item .list-item > div:last-of-type {
   margin-bottom: 0;
@@ -366,7 +376,7 @@
 }
 .section .booking-history .item {
   border-top: 1px solid #818181;
-  padding: 40px 5em 0 5em;
+  padding: 40px 2em 0 2em;
   margin-bottom: 40px;
 }
 @media all and (max-width: 1200px) {
@@ -431,6 +441,7 @@
 }
 .section .booking-history .movie-title {
   width: 80%;
+  margin: 15px 0;
 }
 @media all and (max-width: 768px) {
   .section .booking-history .movie-title {
@@ -447,7 +458,6 @@
 }
 .section .booking-history .booking-list {
   width: 80%;
-  margin-top: 10px;
 }
 @media all and (max-width: 768px) {
   .section .booking-history .booking-list {
@@ -475,7 +485,7 @@
 @media all and (max-width: 768px) {
   .section .booking-history .ticket-state {
     position: static;
-    margin-top: 20px;
+    margin-top: 40px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -769,11 +779,11 @@
   content: "";
   display: inline-block;
   height: 1px;
-  width: 75%;
+  width: 70%;
   background-color: #818181;
   position: absolute;
   right: 0;
-  top: 18px;
+  top: 20px;
 }
 .section .booking .cinema .material-icons {
   font-size: 3rem;
@@ -793,26 +803,33 @@
       flex-wrap: wrap;
 }
 .section .booking .timetable .time {
-  width: 18%;
-  padding: 5px 0;
-  border: 1px solid #fff;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-bottom: 15px;
-  margin-right: 10px;
+  width: 20%;
+}
+@media all and (min-width: 769px) and (max-width: 991px) {
+  .section .booking .timetable .time {
+    width: 16.6%;
+  }
 }
 @media all and (max-width: 768px) {
   .section .booking .timetable .time {
-    width: 22%;
+    width: 33.33%;
   }
 }
-.section .booking .timetable .time.active {
+.section .booking .timetable .time a {
+  display: block;
+  padding: 5px 10px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  margin: 5px;
+}
+.section .booking .timetable .time.active a {
   color: #000;
   border: 1px solid #FCC900;
   background-color: #FCC900;
 }
-.section .booking .timetable .time.disable {
+.section .booking .timetable .time.disable a {
   cursor: not-allowed;
+  pointer-events: none;
   color: #818181;
   border: 1px solid #818181;
 }
@@ -843,6 +860,13 @@
   border-bottom-right-radius: 0;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
+  .section .book-tickets .row-min {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 20px;
+  }
+}
+@media all and (max-width: 768px) {
   .section .book-tickets .row-min {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -935,13 +959,16 @@
 }
 @media all and (max-width: 768px) {
   .section .book-tickets .row-right {
+    border-radius: 10px;
     border-left: none;
     margin-top: 2vw;
+    padding: 20px;
   }
 }
 .section .book-tickets .row-right .summary {
   color: #A18978;
   text-align: right;
+  letter-spacing: 0px;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .section .book-tickets .row-right .summary {
@@ -1042,8 +1069,16 @@
     padding-right: 0;
   }
 }
-.section .tickets-package .row-left .package {
+.section .tickets-package .package {
   margin-bottom: 30px;
+  overflow-x: auto;
+  width: 100%;
+}
+@media all and (max-width: 768px) {
+  .section .tickets-package .table {
+    max-width: 800px;
+    width: 800px;
+  }
 }
 .section .tickets-package .main-title div:nth-of-type(1)::before {
   background-color: #00ABF2;
@@ -1051,10 +1086,18 @@
 .section .tickets-package .main-title div:nth-of-type(2) {
   color: #00ABF2;
 }
+@media all and (max-width: 768px) {
+  .section .tickets-package .package-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 .section .tickets-package .package-title .table-th {
   background-color: #036EB7;
   padding: 5px 5px 5px 10px;
   text-align: left;
+  width: 100%;
 }
 .section .tickets-package .package-title .sale {
   background-color: #00ABF2;
@@ -1071,7 +1114,6 @@
 @media all and (max-width: 768px) {
   .section .tickets-package .package-content {
     padding: 10px;
-    overflow-x: auto;
   }
 }
 .section .tickets-package .package-content .table-th:first-of-type {
@@ -1153,7 +1195,7 @@
 .section .tickets-package .row-right li:last-of-type {
   margin-bottom: 20px;
 }
-.section .tickets-package .actionbtn {
+.section .book-step-btn {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1162,7 +1204,7 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
-.section .tickets-package .actionbtn button {
+.section .book-step-btn button {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -1174,19 +1216,19 @@
       -ms-flex-align: center;
           align-items: center;
 }
-.section .tickets-package .actionbtn button.next {
+.section .book-step-btn button.next {
   background-color: #D26759;
   margin-left: 10px;
 }
-.section .tickets-package .actionbtn button.next .material-icons {
+.section .book-step-btn button.next .material-icons {
   margin-left: 10px;
 }
-.section .tickets-package .actionbtn button.back {
+.section .book-step-btn button.back {
   background-color: #00ABF2;
   background-color: rgba(0, 171, 242, 0.8);
   margin-right: 10px;
 }
-.section .tickets-package .actionbtn button.back .material-icons {
+.section .book-step-btn button.back .material-icons {
   margin-right: 10px;
 }
 
