--- a/scss/global.scss
+++ b/scss/global.scss
@@ -952,7 +952,7 @@ nav {
   }
 
   .primary-title {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 
     &:after {
       content: "|";
@@ -1011,7 +1011,7 @@ nav {
         .material-icons {
           position: absolute;
           left: 15px;
-          top: 40px;
+          top: 39px;
           color: v.$bg-color;
           font-size: 30px;
           cursor: pointer;
@@ -1193,12 +1193,10 @@ nav {
         width: 12em;
 
         @include v.pad-width{
-          width: 8em;
+          width: 50%;
         }
         @include v.phone-width{
-          width: auto;
-          padding: 10px;
-  
+          width: 50%;
         }
 
         &:last-of-type{
@@ -1472,12 +1470,89 @@ footer {
     opacity: 1;
   }
 }
-
+// div table
 .table {display: table;border-collapse: collapse;width: 100%;}
 .table-tr {display: table-row;width: 100%;}
 .table-th {display: table-cell;height: 100%;text-align: center;vertical-align: middle;background-color:#818181;}
 .table-td {display: table-cell; height: 100%; text-align: center;vertical-align: middle;}
 
+// 步驟條
+.step-bar{
+  width: 100%;
+  margin: 80px 0;
+  .progress{
+    display: flex;
+    justify-content: space-around;
+    counter-reset: step;
+    
+    li{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex: 20%;
+      position: relative;
+      z-index: 0;
+      text-align: center;
+       @include v.phone-width {
+           font-size: 0.9em;
+        }
+
+      &::before{
+        content: counter(step);
+        counter-increment: step;
+        width: 40px;
+        height: 40px;
+        line-height:40px;
+        border: 1px solid #818181;
+        border-radius: 100%;
+        text-align: center;
+        background-color: #282828;
+        margin-bottom: 10px;
+        color: #818181;
+        
+        @include v.phone-width {
+           width: 30px;
+           height: 30px;
+           line-height:30px;
+        }
+      }
+      &::after{
+        content: '';
+        position: absolute;
+        width: 65%;
+        height: 1px;
+        background-color: #818181;
+        top:16px;
+        right: -33%;
+        z-index: -1;
+      }
+      &:last-child{
+        &::after{
+          content: none;
+        }
+      }
+      &.active{
+        color: v.$yellow-bg-color;
+         @extend %weight600;
+        &::before{
+          border: 1px solid v.$yellow-bg-color;
+          background-color:v.$yellow-bg-color;
+          color: #000;
+        }
+      }
+      &.finished{
+        color: v.$yellow-bg-color;
+         @extend %weight600;
+        &::before{
+          content:'√';
+          border: 1px solid v.$yellow-bg-color;
+          background-color:v.$yellow-bg-color;
+          color: #000;
+        }
+      }
+    }
+  }
+}
 
 //for youtube rwd
 @include v.pad-width {
