編輯座位表

--- a/css/global.css
+++ b/css/global.css
@@ -1622,6 +1622,11 @@ footer > div a img {
   width: 100%;
   margin: 80px 0;
 }
+@media all and (max-width: 768px) {
+  .step-bar {
+    margin: 40px 0;
+  }
+}
 .step-bar .progress {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1698,7 +1703,7 @@ footer > div a img {
   color: #FCC900;
 }
 .step-bar .progress li.finished::before {
-  content: "√";
+  content: "✓";
   border: 1px solid #FCC900;
   background-color: #FCC900;
   color: #000;
