--- a/css/all.css
+++ b/css/all.css
@@ -1231,6 +1231,62 @@
 .section .book-step-btn button.back .material-icons {
   margin-right: 10px;
 }
+.section .seat-table {
+  width: 80%;
+  max-width: 80%;
+  margin: 0 auto;
+  overflow-x: auto;
+}
+.section .seat-table .screen {
+  color: #000;
+  text-align: center;
+  vertical-align: middle;
+  width: 100%;
+  height: 50px;
+  background-image: url(../image/svg/screen.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-top: 5px;
+  margin: 20px auto 40px auto;
+}
+.section .seat-table .table-tr {
+  height: 40px;
+}
+.section .seat-table .table-td .td-block {
+  width: 45px;
+  padding: 2px 0;
+  margin: 0 auto;
+}
+.section .seat-table .table-td .seat {
+  cursor: pointer;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+.section .seat-table .table-td .seat .material-icons {
+  font-size: 22px;
+  vertical-align: text-top;
+}
+.section .seat-table .table-td .accessibility {
+  border-color: #E75514;
+  color: #E75514;
+}
+.section .seat-table .table-td.soldout .seat {
+  border-color: #818181;
+  cursor: not-allowed;
+  background-color: #DD362B;
+}
+.section .seat-table .table-td.booked .seat {
+  border-color: #818181;
+  background-color: #73C044;
+}
+.section .seat-table .table-td.disable .seat {
+  cursor: not-allowed;
+  pointer-events: none;
+  background-color: rgba(129, 129, 129, 0.3254901961);
+  color: #818181;
+  border-color: #818181;
+}
 
 @-webkit-keyframes rotate {
   0% {
