--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1480,6 +1480,9 @@ footer {
 .step-bar{
   width: 100%;
   margin: 80px 0;
+  @include v.phone-width {
+     margin: 40px 0;
+  }
   .progress{
     display: flex;
     justify-content: space-around;
@@ -1544,7 +1547,7 @@ footer {
         color: v.$yellow-bg-color;
          @extend %weight600;
         &::before{
-          content:'√';
+          content:'✓';
           border: 1px solid v.$yellow-bg-color;
           background-color:v.$yellow-bg-color;
           color: #000;
@@ -1583,6 +1586,7 @@ footer {
     height: 0;
     overflow: hidden;
   }
+
 
   .video-container iframe,
   .video-container object,
